# kemeleon

./: Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/workflows/: rust.yml
.github/workflows.disabled/: rust.yml
doc/licenses/: rustcrypto.kems.APACHE2.LICENSE  rustcrypto.kems.MIT.LICENSE  sorpaas.hmac_drbg.APACHE2.LICENSE
examples/: integration.rs  mlkem1024-x25519_kex.rs  x25519-mlkem_kex.rs
src/: README.md  compress.rs  errors.rs  fips.rs  kemeleon.rs  lib.rs  mlkem.rs  x25519kem.rs  xwing.rs
src/kemeleon/: README.md  ciphertext.rs  encapsulation_key.rs
src/kemeleon/ciphertext/: compress.rs  count_rng.rs  hkdf_rng.rs  hmac_drbg.rs  precomputed.rs
src/x25519kem/: x25519_elligator2.rs
src/xwing/: x25519_elligator2.rs
tests/: consts.py  encap-decap.rs  key-gen.rs  nist.rs  vectors.rs
