[package]
name = "kemeleon"
version = "0.1.0-rc.1"
edition = "2021"
description = """
Kemeleon encoding algorithms for obfuscating ML-KEM handshake elements.
"""
authors = ["jmwample"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/kemeleon"
repository = "https://github.com/jmwample/kemeleon"
categories = ["no-std", "cryptography"]
keywords = ["ML-KEM", "Kemeleon", "cryptography"]
readme = "README.md"
rust-version = "1.81"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "doc/katex-header.html",
]

[features]
default=[]
alloc = []
getrandom = []

[dependencies]
num-bigint = "0.4.6"
rand = "0.8.5"
# ml-kem = { version = "0.3.0-pre" }
ml-kem = { git="https://github.com/jmwample/KEMs.git",  branch="params"}
# ml-kem = { path="../KEMs/ml-kem/" }
hybrid-array = {version  = "0.2.0-rc.10", features=["extra-sizes"]}
rand_core = "0.6.4"
kem = "0.3.0-pre.0"
lazy_static = "1.5.0"

# HKDF RNG
digest = "0.10.7"
generic-array = "1.1.0"
hkdf = "0.12.4"
sha2 = "0.10.8"

hex =  { version = "0.4.3", features = ["serde"] }

# X-Wing
x-wing = "0.0.1-alpha"

[dev-dependencies]

hex-literal = "0.4.1"
num-rational = "0.4.2"
serde = { version = "1.0.208", features = ["derive"] }
